--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "start": "vinxi start"
   },
   "dependencies": {
-    "@lucia-auth/adapter-mongodb": "^1.0.2",
-    "@solidjs/router": "^0.12.4",
-    "@solidjs/start": "^0.6.0",
+    "@lucia-auth/adapter-mongodb": "^1.0.3",
+    "@solidjs/router": "^0.12.5",
+    "@solidjs/start": "^0.7.5",
+    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.18",
-    "lucia": "^3.0.1",
-    "mongoose": "^8.2.0",
-    "oslo": "^1.1.3",
+    "bcryptjs": "^2.4.3",
+    "lucia": "^3.1.1",
+    "mongoose": "^8.2.1",
     "postcss": "^8.4.35",
     "solid-js": "^1.8.15",
     "tailwindcss": "^3.4.1",
-    "vinxi": "^0.3.9",
+    "vinxi": "^0.3.10",
     "vite": "4.4.6"
   },
   "engines": {
