--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.18",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
     "lucia": "^3.1.1",
     "mongoose": "^8.2.1",
     "postcss": "^8.4.35",
