--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@lucia-auth/adapter-mongodb": "^1.0.3",
     "@solidjs/router": "^0.13.6",
     "@solidjs/start": "^1.0.2",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "bcryptjs": "^2.4.3",
